--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -6,6 +6,7 @@ set(LLVM_LINK_COMPONENTS
 add_clang_executable(brinfo
   BrInfo.cpp
   Analysis.cpp
+  Condition.cpp
   )
 
 clang_target_link_libraries(brinfo
