--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -3,6 +3,11 @@ set(LLVM_LINK_COMPONENTS
   # Support
   )
 
+include(FetchContent)
+
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
+FetchContent_MakeAvailable(json)
+
 add_clang_executable(brinfo
   BrInfo.cpp
   Analysis.cpp
@@ -17,4 +22,5 @@ clang_target_link_libraries(brinfo
   clangFrontend
   clangTooling
   # clangToolingRefactoring
+  nlohmann_json::nlohmann_json
   )
