refactor the code
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -12,6 +12,7 @@ add_clang_executable(brinfo
   BrInfo.cpp
   Analysis.cpp
   Condition.cpp
+  CondChain.cpp
   )
 
 clang_target_link_libraries(brinfo
