add support for ContinueStmtClass and ContinueStmtClass
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,14 +9,24 @@
             "request": "launch",
             "name": "Debug",
             "program": "build/debug/bin/brinfo",
+            // "args": [
+            //     "--project",
+            //     "clang-tools-extra/brinfo/test",
+            //     "clang-tools-extra/brinfo/test/c.cpp",
+            //     "-f",
+            //     "myFunction",
+            //     // "-c",
+            //     // "Reader",
+            //     // "--cfg",
+            //     "--",
+            //     "-ferror-limit=0"
+            // ],
             "args": [
                 "--project",
-                "clang-tools-extra/brinfo/test",
-                "clang-tools-extra/brinfo/test/c.cpp",
-                "-f",
-                "readComment",
-                "-c",
-                "Reader",
+                "/home/chubei/workspace/openharmony/third_party_ninja",
+                "-p",
+                "/home/chubei/workspace/openharmony/third_party_ninja/build",
+                "/home/chubei/workspace/openharmony/third_party_ninja/src/ninja.cc",
                 // "--cfg",
                 "--",
                 "-ferror-limit=0"
