--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,28 +42,28 @@
             "request": "launch",
             "name": "Release",
             "program": "build/release/bin/brinfo",
+            "args": [
+                "--project",
+                "clang-tools-extra/brinfo/test",
+                "clang-tools-extra/brinfo/test/c.cpp",
+                "-f",
+                "readComment",
+                // "-c",
+                // "Reader",
+                "--cfg",
+                "--",
+                "-ferror-limit=0"
+            ],
             // "args": [
             //     "--project",
-            //     "clang-tools-extra/brinfo/test",
-            //     "clang-tools-extra/brinfo/test/c.cpp",
-            //     "-f",
-            //     "readComment",
-            //     "-c",
-            //     "Reader",
+            //     "/home/chubei/workspace/openharmony/third_party_ninja",
+            //     "-p",
+            //     "/home/chubei/workspace/openharmony/third_party_ninja/build",
+            //     "/home/chubei/workspace/openharmony/third_party_ninja/src/ninja.cc",
             //     // "--cfg",
             //     "--",
             //     "-ferror-limit=0"
             // ],
-            "args": [
-                "--project",
-                "/home/chubei/workspace/openharmony/third_party_ninja",
-                "-p",
-                "/home/chubei/workspace/openharmony/third_party_ninja/build",
-                "/home/chubei/workspace/openharmony/third_party_ninja/src/ninja.cc",
-                // "--cfg",
-                "--",
-                "-ferror-limit=0"
-            ],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build release",
             "sourceLanguages": [
