add config to install brinfo
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -25,3 +25,7 @@ clang_target_link_libraries(brinfo
   # clangToolingRefactoring
   nlohmann_json::nlohmann_json
   )
+
+install(TARGETS brinfo
+  RUNTIME DESTINATION bin
+  COMPONENT brinfo)
