--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -1,7 +1,4 @@
-set(LLVM_LINK_COMPONENTS
-  # FrontendOpenMP
-  # Support
-  )
+set(LLVM_LINK_COMPONENTS)
 
 include(FetchContent)
 
@@ -17,12 +14,8 @@ add_clang_executable(brinfo
 
 clang_target_link_libraries(brinfo
   PRIVATE
-  # clangAST
-  # clangASTMatchers
-  # clangBasic
   clangFrontend
   clangTooling
-  # clangToolingRefactoring
   nlohmann_json::nlohmann_json
   )
 
