change file to analyze in launch.json
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,9 +26,9 @@
                 "/home/chubei/utgen-focal/json",
                 "-p",
                 "/home/chubei/utgen-focal/json/build",
-                "/home/chubei/utgen-focal/json/single_include/nlohmann/json.hpp",
-                "-f",
-                "scan_number"
+                "/home/chubei/utgen-focal/json/include/nlohmann/detail/input/lexer.hpp",
+                // "-f",
+                // "scan_number"
                 // "--cfg",
                 // "--",
                 // "-ferror-limit=0"
