Changes fix bug of handling loop like while (true) fix bug of finding best cover for switch define and use debug macros
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/clang-tools-extra/brinfo/CMakeLists.txt
+++ b/clang-tools-extra/brinfo/CMakeLists.txt
@@ -19,6 +19,10 @@ clang_target_link_libraries(brinfo
   nlohmann_json::nlohmann_json
   )
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_definitions(brinfo PRIVATE DEBUG)
+endif()
+
 install(TARGETS brinfo
   RUNTIME DESTINATION bin
   COMPONENT brinfo)
