--- a/clang-tools-extra/focxt/CMakeLists.txt
+++ b/clang-tools-extra/focxt/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(LLVM_LINK_COMPONENTS support)
+set(CMAKE_BUILD_TYPE Debug)
 
 include(FetchContent)
 
@@ -7,7 +8,7 @@ FetchContent_MakeAvailable(json)
 
 add_clang_executable(focxt
 Focxt.cpp
-GetAllPath.cpp
+GetAllDefinition.cpp
 GetSignature.cpp
 GetAllContext.cpp
 CoutContext.cpp
