add some code to debug
Signed-off-by: cppbear <chubei99@outlook.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,14 +23,12 @@
             // ],
             "args": [
                 "--project",
-                "/home/chubei/utgen-focal/json",
+                "/home/chubei/utgen-focal/lz4",
                 "-p",
-                "/home/chubei/utgen-focal/json/build",
-                "/home/chubei/utgen-focal/json/include/nlohmann/detail/input/lexer.hpp",
-                // "/home/chubei/utgen-focal/json/single_include/nlohmann/json.hpp",
+                "/home/chubei/utgen-focal/lz4/build-cmake",
+                "/home/chubei/utgen-focal/lz4/lib/lz4hc.c",
                 "-f",
-                // "scan_number",
-                "scan_comment",
+                "LZ4HC_compress_optimal",
                 // "--cfg",
                 // "--",
                 // "-ferror-limit=0"
@@ -48,15 +46,13 @@
             "program": "build/release/bin/brinfo",
             "args": [
                 "--project",
-                "clang-tools-extra/brinfo/test",
-                "clang-tools-extra/brinfo/test/c.cpp",
+                "/home/chubei/utgen-focal/lz4",
+                "-p",
+                "/home/chubei/utgen-focal/lz4/build-cmake",
+                "/home/chubei/utgen-focal/lz4/lib/lz4hc.c",
                 "-f",
-                "readComment",
-                // "-c",
-                // "Reader",
-                "--cfg",
-                "--",
-                "-ferror-limit=0"
+                "LZ4HC_compress_optimal",
+                // "--cfg",
             ],
             // "args": [
             //     "--project",
