--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,18 @@
             ],
             // "args": [
             //     "--project",
+            //     "/home/abezbm/brotli",
+            //     "--build",
+            //     "/home/abezbm/brotli/build",
+            // ],
+            // "args": [
+            //     "--project",
+            //     "/home/abezbm/zstd",
+            //     "--build",
+            //     "/home/abezbm/zstd/build-output",
+            // ],
+            // "args": [
+            //     "--project",
             //     "/home/abezbm/bcrypt-1.1",
             //     "--build",
             //     "/home/abezbm/bcrypt-1.1/build",
